# shadervalidate

./: CMakeLists.txt  README.md  clchooser.hpp  clvalidate.cpp
